--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "feed": "^4.2.2",
+    "framer-motion": "^12.5.0",
     "katex": "^0.16.20",
+    "lucide-react": "^0.483.0",
     "next": "^15.1.4",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
